--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -51,6 +52,7 @@
                                 <connections>
                                     <outlet property="userImage" destination="MvJ-BQ-Ihc" id="woo-5v-K4k"/>
                                     <outlet property="userName" destination="JT6-XK-Opj" id="Aba-XQ-k7M"/>
+                                    <segue destination="ICW-5T-ggX" kind="show" id="rbJ-wU-Fa8"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -64,6 +66,68 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TNo-gh-mI1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-251" y="329"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="nbN-BB-k5M">
+            <objects>
+                <viewController id="ICW-5T-ggX" customClass="DetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="XRU-sv-SeX">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="US7-Sd-kcj">
+                                <rect key="frame" x="47" y="180" width="320" height="320"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="US7-Sd-kcj" secondAttribute="height" multiplier="1:1" id="eZt-76-Zx6"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="oQG-s2-iCo">
+                                <rect key="frame" x="47" y="530" width="320" height="72"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cLz-ao-0XV">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="24"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lYR-lS-hx6">
+                                        <rect key="frame" x="0.0" y="24" width="320" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p5r-tY-uDm">
+                                        <rect key="frame" x="0.0" y="48" width="320" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="nZ9-4T-bFM" firstAttribute="bottom" secondItem="oQG-s2-iCo" secondAttribute="bottom" constant="260" id="CI3-JH-OKY"/>
+                            <constraint firstItem="oQG-s2-iCo" firstAttribute="leading" secondItem="nZ9-4T-bFM" secondAttribute="leading" constant="47" id="CjJ-3k-pbg"/>
+                            <constraint firstItem="nZ9-4T-bFM" firstAttribute="trailing" secondItem="US7-Sd-kcj" secondAttribute="trailing" constant="47" id="YaW-bm-iu0"/>
+                            <constraint firstItem="oQG-s2-iCo" firstAttribute="top" secondItem="US7-Sd-kcj" secondAttribute="bottom" constant="30" id="iQU-AV-ZQi"/>
+                            <constraint firstItem="US7-Sd-kcj" firstAttribute="leading" secondItem="nZ9-4T-bFM" secondAttribute="leading" constant="47" id="jOs-Xi-YoO"/>
+                            <constraint firstItem="US7-Sd-kcj" firstAttribute="top" secondItem="nZ9-4T-bFM" secondAttribute="top" constant="40" id="nQh-k2-Q55"/>
+                            <constraint firstItem="nZ9-4T-bFM" firstAttribute="trailing" secondItem="oQG-s2-iCo" secondAttribute="trailing" constant="47" id="tJa-95-RiQ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="nZ9-4T-bFM"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="2Yb-rw-FhP"/>
+                    <connections>
+                        <outlet property="userEmail" destination="p5r-tY-uDm" id="7y4-hq-brg"/>
+                        <outlet property="userImage" destination="US7-Sd-kcj" id="dnP-Ff-rdy"/>
+                        <outlet property="userName" destination="cLz-ao-0XV" id="U6L-OS-Gco"/>
+                        <outlet property="userPhone" destination="lYR-lS-hx6" id="MhE-4u-ySq"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cma-a3-tSu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="702.89855072463774" y="328.79464285714283"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="zUm-Fp-qEm">
