--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -50,6 +50,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="6tJ-4H-DDa" kind="show" id="Yx0-bY-vTK"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -106,4 +109,7 @@
             <point key="canvasLocation" x="520.79999999999995" y="-138.17733990147784"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="o5T-yK-ZQa"/>
+    </inferredMetricsTieBreakers>
 </document>
