--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
+        <!--Users-->
         <scene sceneID="w7T-cI-rXi">
             <objects>
                 <tableViewController id="67Q-ng-vk6" customClass="TableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
@@ -29,6 +29,10 @@
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="D9w-qB-zpE">
                                                     <rect key="frame" x="0.0" y="0.5" width="60" height="60"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="60" id="YlZ-EY-ZQr"/>
+                                                        <constraint firstAttribute="width" constant="60" id="fmo-Qp-kIW"/>
+                                                    </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="naR-pp-D9M">
                                                     <rect key="frame" x="65" y="20" width="283" height="20.5"/>
@@ -49,7 +53,7 @@
                                 <connections>
                                     <outlet property="nameLabel" destination="naR-pp-D9M" id="R8T-uY-ehO"/>
                                     <outlet property="personImageView" destination="D9w-qB-zpE" id="yav-7H-ma8"/>
-                                    <segue destination="U47-AA-lki" kind="show" id="h8K-UT-wfC"/>
+                                    <segue destination="U47-AA-lki" kind="show" identifier="userSegue" id="h8K-UT-wfC"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -58,7 +62,7 @@
                             <outlet property="delegate" destination="67Q-ng-vk6" id="2Bl-I6-bVS"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="cgi-8R-ih9"/>
+                    <navigationItem key="navigationItem" title="Users" id="cgi-8R-ih9"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eNa-B7-C88" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
